<resources>
    <string name="app_name">LibrarySystem07-Android</string>

    <!-- Strings used for top navigation -->
    <string name="reserveItem">Reserve Items</string>
    <string name="account">My Account</string>
    <string name="event">Create Event</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="upadateaddress_hint">enter new address</string>
    <string name="upadateaddress_button">Update Address</string>
    <string name="title_activity_account_info">AccountInfo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- log in page -->
    <string name="title">McLennan Library</string>

    <string name="login_username_hint">Username</string>
    <string name="login_id_hint">Library Card ID</string>
    <string name="signup_name_hint">Full Name</string>
    <string name="signup_username_hint">Username</string>
    <string name="signup_id_hint">Library Card ID</string>
    <string name="signup_address_hint">Address</string>

    <string name="signup_button">Sign Up</string>
    <string name="login_button">Log In</string>

    <string name="librarian_check">I am a librarian</string>
    <string name="title_activity_browse">Browse</string>

    <!-- inventory page -->
    <string name="inventory_title">Browse Inventory</string>
    <string name="reserve">Reserve</string>
    <string name="make_reservation">Create Reservation</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="date_input">DD/MM/YY</string>


    <string name="item1_title">Hamlet</string>
    <string name="item1_author">William Shakespeare</string>

    <string name="item2_title">Romeo and Juliette</string>
    <string name="item2_author">William Shakespeare</string>

    <string name="item3_title">"Jojo\'s Bizarre Adventure"</string>
    <string name="item3_author">Hirohiko Araki</string>
    <string name="title_activity_after_logg_in">AfterLoggIn</string>
    
     <!-- schedule page -->
    
    <string name="librarianshiftspinner_label">Shifts</string>
    <string name="librarian1">&#160;&#160;Librarian1</string>
    <string name="register_button">Register</string>
    <string name="refresh_button">Refresh lists</string>
    <string name="name_prompt">Select name</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="updating">Update</string>
    
    <string name="time7am">7am</string>
    <string name="time8am">8am</string>
    <string name="time9am">9am</string>
    <string name="time10am">10am</string>
    <string name="time11am">11am</string>
    <string name="time12pm">12pm</string>
    <string name="time1pm">1pm</string>
    <string name="time2pm">2pm</string>
    <string name="time3pm">3pm</string>
    <string name="time4pm">4pm</string>
    <string name="time5pm">5pm</string>
    <string name="time6pm">6pm</string>
    <string name="time7pm">7pm</string>
    <string name="time8pm">8pm</string>
    <string name="time9pm">9pm</string>
    <string name="time10pm">10pm</string>

    <color name="red">#FF0000</color>
    <color name="gray">#808080</color>
    <color name="blue">#0000FF</color>
    <color name="black">#000000</color>
    
</resources>
