<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.mcgill.ecse321.librarysystem07.MainActivity">
    <item
        android:id="@+id/reserveItem"
        android:orderInCategory="100"
        android:title="@string/reserveItem"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"/>
    <item
        android:id="@+id/account"
        android:orderInCategory="100"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_account_circle_24" />
    <item
        android:id="@+id/event"
        android:orderInCategory="100"
        android:title="@string/event"
        android:icon="@drawable/ic_baseline_event_available_24" />
</menu>