<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A8001F"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/title"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:visibility="gone" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:hint="@string/login_username_hint" />

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="@string/login_id_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <!--
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            -->


            <CheckBox
                android:id="@+id/checkbox_librarian"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="top"
                android:text="@string/librarian_check" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:backgroundTint="#A8001F"
                android:onClick="logIn"
                android:text="@string/login_button"
                android:layout_marginLeft="135dp"
                android:layout_marginBottom="-5dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:hint="@string/signup_name_hint" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="@string/signup_username_hint" />

        <EditText
            android:id="@+id/signup_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="@string/signup_id_hint" />

        <EditText
            android:id="@+id/signup_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="@string/signup_address_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="signup"

            android:backgroundTint="#A8001F"
            android:text="@string/signup_button"
            android:layout_marginRight="10dp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/dayLabelsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" >

        <RelativeLayout
            android:id="@+id/currentMonthRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/currentMonthTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text=""
                android:textSize="15dp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/currentYearTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text=""
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sundayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/sundayDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sundayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/sun"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:textStyle="bold" />

            <View
                android:id="@+id/dayMarkerView"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/blue" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mondayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/mondayDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mondayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tuesdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/tuesdayDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tuesdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/tue"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wednesdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/wednesdayDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wednesdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/wed"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/thursdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/thursdayDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/thursdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/thu"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fridayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/fridayDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fridayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/fri"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/saturdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/saturdayDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/saturdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/sat"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
