<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A8001F"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/title"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Account Information"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Name"
                android:paddingLeft="20dp"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Name:  "/>
            <TextView
                android:id="@+id/Username"
                android:paddingLeft="20dp"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Username:  "/>
            <TextView
                android:id="@+id/CardId"
                android:paddingLeft="20dp"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="ID Card Number:  "/>
            <TextView
                android:id="@+id/Address"
                android:paddingLeft="20dp"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Address:  "/>
            <TextView
                android:id="@+id/Balance"
                android:paddingLeft="20dp"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Balance:  "/>
            <TextView
                android:id="@+id/DemeritPoints"
                android:paddingLeft="20dp"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Demerit Points:  "/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newaddress_update"
                    android:hint="@string/upadateaddress_hint"/>

                <TextView
                    android:id="@+id/error"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:text=""
                    android:textColor="#FF0000"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    android:backgroundTint="#A8001F"
                    android:text="@string/upadateaddress_button"
                    android:onClick="updateAddress"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>